--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <script src="/360/volk/tour.js"></script>
-
+	<h2>Виртуальные туры</h2>
 <div id="pano" style="width:100%;height:100vh;">
 	<noscript><table style="width:100%;height:100%;"><tr style="vertical-align:middle;"><td><div style="text-align:center;">ERROR:<br/><br/>Javascript not activated<br/><br/></div></td></tr></table></noscript>
 	<script>
