--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="pano" style="width:100%;height:100vh;">
 	<noscript><table style="width:100%;height:100%;"><tr style="vertical-align:middle;"><td><div style="text-align:center;">ERROR:<br/><br/>Javascript not activated<br/><br/></div></td></tr></table></noscript>
 	<script>
-		embedpano({swf:"/360/volk/tour.swf", xml:"/360/volk/tour.xml", target:"pano", html5:"auto", mobilescale:1.0, passQueryParameters:true});
+		embedpano({swf:"/360/volk/tour.swf", xml:"/360/vtour/tour.xml", target:"pano", html5:"auto", mobilescale:1.0, passQueryParameters:true});
 	</script>
 </div>
 
