--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 
-<script src="/360/volk/tour.js"></script>
+<script src="/360/vtour/tour.js"></script>
 	<h2>Виртуальные туры</h2>
 <div id="pano" style="width:100%;height:100vh;">
 	<noscript><table style="width:100%;height:100%;"><tr style="vertical-align:middle;"><td><div style="text-align:center;">ERROR:<br/><br/>Javascript not activated<br/><br/></div></td></tr></table></noscript>
 	<script>
-		embedpano({swf:"/360/volk/tour.swf", xml:"/360/vtour/tour.xml", target:"pano", html5:"auto", mobilescale:1.0, passQueryParameters:true});
+		embedpano({swf:"/360/vtour/tour.swf", xml:"/360/vtour/tour.xml", target:"pano", html5:"auto", mobilescale:1.0, passQueryParameters:true});
 	</script>
 </div>
 
