--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<style>
 		html { /*height:100vh;*/ }
 		body {  margin:0; padding:0; font-family:"Trebuchet MS", Helvetica, sans-serif; font-size:1rem; color:ForestGreen; background-color:#000000; }
+		.on_pano { margin-bottom:-3em;}
 	</style>
 </head>
 <body>
 
 <script src="/360/vtour/tour.js"></script>
-	<h2>Виртуальные туры</h2>
+	<h2 class="on_pano">Виртуальные туры</h2>
 <div id="pano" style="width:100%;height:100vh;">
 	<noscript><table style="width:100%;height:100%;"><tr style="vertical-align:middle;"><td><div style="text-align:center;">ERROR:<br/><br/>Javascript not activated<br/><br/></div></td></tr></table></noscript>
 	<script>
