h1 up left + bit text

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<style>
 		html { /*height:100vh;*/ }
 		body {  margin:0; padding:0; font-family:"Trebuchet MS", Helvetica, sans-serif; font-size:1rem; color: #383838; background-color: #f9f9f9; }
-		.on_pano { margin-top:-3rem; z-index: 50; position: absolute; top: 49vh;
-					left: 11.5vw; width: 77%; margin-left: auto; margin-right: auto;
-					/*padding: rem;*/ background-color: rgba(44, 151 , 204, .77);}
+		.on_pano {z-index: 50; position: absolute; top: 5vh;
+					left: 2.81vw;  margin-left: auto; margin-right: auto;
+					padding: 0 1.77rem 0 1.77rem; background-color: rgba(44, 151 , 204, .77);}
 		.on_pano h1{ text-align: center; color: #f9f9f9;}
 		#pano { width: 100%; height: 100vh;  z-index: 30;}
 		.phone_wrap{ text-align: center; padding: 1.41rem; }
@@ -34,6 +34,9 @@
 </div>
 <div class="phone_wrap">
 	<p><a class="phone" href="tel:+79992492194">👋 +7 999 249·21·94</a></p>
+</div>
+<div class="text_wrap">
+	<p>Создаем пвнорамы 360° и виртуальные туры. Добавляем интеракив, фото, видео и графику. Публикуем панорамы на сервисах Yandex, Google, Booking.</p>
 </div>
 
 </body>
