just panorama correctly

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<p><a class="phone" href="tel:+79992492194">👋 +7 999 249·21·94</a></p>
 </div>
 <div class="text_wrap">
-	<p>Создаем пвнорамы 360° и виртуальные туры. Добавляем интеракив, фото, видео и графику. Публикуем панорамы на сервисах Yandex, Google, Booking.</p>
+	<p>Создаем панорамы 360° и виртуальные туры. Добавляем интеракив, фото, видео и графику. Публикуем панорамы на сервисах Yandex, Google, Booking.</p>
 </div>
 
 </body>
