--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
 	<meta name="mobile-web-app-capable" content="yes" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta http-equiv="x-ua-compatible" content="IE=edge" />
-	<style>
-		html { /*height:100vh;*/ }
-		body {  margin:0; padding:0; font-family:"Trebuchet MS", Helvetica, sans-serif; font-size:1rem; /*font-weight: 400; font-stretch: expanded;*/ color: #383838; background-color: #f9f9f9; }
-		.on_pano {z-index: 50; position: absolute; top: 5vh;
-					left: 2.81vw;  margin-left: auto; margin-right: auto;
-					padding: 0 1.77rem 0 1.77rem; background-color: rgba(44, 151 , 204, .77);}
-		.on_pano h1{ text-align: center; font-weight: 100; font-stretch: ultra-expanded; color: #f9f9f9;}
-		#pano { width: 100%; height: 100vh;  z-index: 30;}
-		.phone_wrap{ text-align: center; padding: 1.41rem; }
-		.phone{ text-decoration: none; color: #383838; }
-		.text_wrap{ width: 49vw; text-align: justify; margin-left: auto; margin-right: auto;}
-	</style>
+
+	<link rel="icon" type="image/svg+xml" sizes="any" href="favicon/icon.svg">
+	<link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="favicon/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="180x180" href="favicon/apple-touch-icon.png">
+	
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
@@ -31,13 +28,13 @@
 	</script>
 </div>
 <div class="on_pano">
-	<h1>Панорамы 360&#176; и Виртуальные туры в Санкт-Петербурге</h1>
+	<h1>Панорамы 360&#176; и Виртуальные туры в Санкт&#8209;Петербурге 🏙️</h1>
 </div>
 <div class="phone_wrap">
 	<p><a class="phone" href="tel:+79992492194">👋 +7 999 249·21·94</a></p>
 </div>
 <div class="text_wrap">
-	<p>Создаем панорамы 360° и виртуальные туры. Добавляем интеракив, фото, видео и графику. Публикуем панорамы на сервисах Yandex, Google, Booking.</p>
+	<p>Создаем панорамы 360° и виртуальные туры в Санкт-Петербурге. Добавляем интеракив, фото, видео и графику. Публикуем панорамы на сервисах Yandex, Google, Booking.</p>
 </div>
 
 </body>
