--- a/index.html
+++ b/index.html
@@ -16,26 +16,41 @@
 	
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+		m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+	(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+	ym(75306943, "init", {
+		clickmap:true,
+		trackLinks:true,
+		accurateTrackBounce:true,
+		webvisor:true
+	});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/75306943" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
 <body>
 
-<script src="/360/vtour/tour.js"></script>
-<div id="pano">
-	<noscript><table style="width:100%;height:90%;"><tr style="vertical-align:middle;"><td><div style="text-align:center;">ERROR:<br/><br/>Javascript not activated<br/><br/></div></td></tr></table></noscript>
-	<script>
+	<script src="/360/vtour/tour.js"></script>
+	<div id="pano">
+		<noscript><table style="width:100%;height:90%;"><tr style="vertical-align:middle;"><td><div style="text-align:center;">ERROR:<br/><br/>Javascript not activated<br/><br/></div></td></tr></table></noscript>
+		<script>
 		embedpano({swf:"/360/vtour/tour.swf", xml:"/360/vtour/tour.xml", target:"pano", html5:"auto", mobilescale:1.0, passQueryParameters:true});
-	</script>
-</div>
-<div class="on_pano">
-	<h1>Панорамы 360&#176; и Виртуальные туры в Санкт&#8209;Петербурге 🏙️</h1>
-</div>
-<div class="phone_wrap">
-	<p><a class="phone" href="tel:+79992492194">👋 +7 999 249·21·94</a></p>
-</div>
-<div class="text_wrap">
-	<p>Создаем панорамы 360° и виртуальные туры в Санкт-Петербурге. Добавляем интеракив, фото, видео и графику. Публикуем панорамы на сервисах Yandex, Google, Booking.</p>
-</div>
+		</script>
+	</div>
+	<div class="on_pano">
+		<h1>Панорамы 360&#176; и Виртуальные туры в Санкт&#8209;Петербурге 🏙️</h1>
+	</div>
+	<div class="phone_wrap">
+		<p><a class="phone" href="tel:+79992492194">👋 +7 999 249·21·94</a></p>
+	</div>
+	<div class="text_wrap">
+		<p>Создаем панорамы 360° и виртуальные туры в Санкт-Петербурге. Добавляем интеракив, фото, видео и графику. Публикуем панорамы на сервисах Yandex, Google, Booking.</p>
+	</div>
 
 </body>
 </html>
